--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "mongodb": "^3.1.10",
-    "mongoose": "^5.3.16",
+    "@sendgrid/mail": "^6.4.0",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.3.5",
+    "mongoose": "^5.7.13",
+    "nodemailer": "^6.4.0",
     "validator": "^10.9.0"
   }
 }
