--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +13,13 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "dotenv": "^8.2.0",
+    "express": "^4.16.4",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
     "nodemailer": "^6.4.0",
     "validator": "^10.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
