--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mongodb": "^3.3.5",
