--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
     "nodemailer": "^6.4.0",
