--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.0",
     "validator": "^10.9.0"
   },
