--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.7.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.0",
+    "sharp": "^0.23.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
