--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test":"env-cmd ./config/test/env jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
   },
   "jest": {
     "testEnvironment": "node"
@@ -29,6 +29,7 @@
   "devDependencies": {
     "env-cmd": "^8.0.2",
     "jest": "^24.9.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.1"
   }
 }
